Fixed some alignment errors

--- a/css/styles.css
+++ b/css/styles.css
@@ -1173,6 +1173,7 @@ body{
     .starter-plan{
         padding: 0px;
         width: 300px;
+        margin: 0px;
     }
 
     .starter-plan-header{
